--- a/HandicraftApp/Crochet.xaml
+++ b/HandicraftApp/Crochet.xaml
@@ -17,31 +17,50 @@
             <!-- Name item template -->
             <DataTemplate x:Key="crochetHooksTemplate">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="5, 0, 5, 0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column1" />
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column2" />
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column3" />
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column4" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Margin="5, 0, 5, 0">
                         <Run FontWeight="Bold">Koko:</Run>
                     </TextBlock>
-                    <TextBlock Text="{Binding Size}" Margin="5, 0, 5, 0" />
-                    <TextBlock Margin="5, 0, 5, 0">
+                    <TextBlock Grid.Column="1" Text="{Binding Size}" Margin="5, 0, 5, 0" />
+                    <TextBlock Grid.Column="2" Margin="5, 0, 5, 0">
                         <Run FontWeight="Bold">Materiaali:</Run>
                     </TextBlock>
-                    <TextBlock Text="{Binding Material}" Margin="5, 0, 5, 0"/>
+                    <TextBlock Grid.Column="3" Text="{Binding Material}" Margin="5, 0, 5, 0"/>
+                    </Grid>
                 </StackPanel>
             </DataTemplate>
 
             <DataTemplate x:Key="crochetThreadsTemplate">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="5, 0, 5, 0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column1" />
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column2" />
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column3" />
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column4" />
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column5" />
+                            <ColumnDefinition Width="Auto" SharedSizeGroup="Column6" />
+                        </Grid.ColumnDefinitions>
+                    
+                    <TextBlock Grid.Column="0" Margin="5, 0, 5, 0">
                         <Run FontWeight="Bold">Koko:</Run>
                     </TextBlock>
-                    <TextBlock Text="{Binding Size}" Margin="5, 0, 5, 0" />
-                    <TextBlock Margin="5, 0, 5, 0">
+                    <TextBlock Grid.Column="1" Text="{Binding Size}" Margin="5, 0, 5, 0" />
+                    <TextBlock Grid.Column="2" Margin="5, 0, 5, 0">
                         <Run FontWeight="Bold">Materiaali:</Run>
                     </TextBlock>
-                    <TextBlock Text="{Binding Material}" Margin="5, 0, 5, 0"/>
-                    <TextBlock Margin="5, 0, 5, 0">
+                    <TextBlock Grid.Column="3" Text="{Binding Material}" Margin="5, 0, 5, 0"/>
+                    <TextBlock Grid.Column="4" Margin="5, 0, 5, 0">
                         <Run FontWeight="Bold">Väri:</Run>
                     </TextBlock>
-                    <TextBlock Text="{Binding Colour}" Margin="5, 0, 5, 0"/>
+                    <TextBlock Grid.Column="5" Text="{Binding Colour}" Margin="5, 0, 5, 0"/>
+                    </Grid>
                 </StackPanel>
             </DataTemplate>
         </Grid.Resources>
@@ -77,7 +96,7 @@
             <Label x:Name="SelectedLabel" Style="{StaticResource listBoxHeaderTextStyle}">Ei valintaa</Label>
         </Border>
 
-        <ListBox x:Name="CrochetBox" SelectionMode="Single" Grid.Column="1" Grid.Row="2" ItemsSource="{Binding}"
+        <ListBox Grid.IsSharedSizeScope="True" x:Name="CrochetBox" SelectionMode="Single" Grid.Column="1" Grid.Row="2" ItemsSource="{Binding}"
                  ItemTemplateSelector="{StaticResource itemViewDataTemplateSelector}" SelectionChanged="crochet_SelectionChanged" IsSynchronizedWithCurrentItem="True">
         </ListBox>
     </Grid>
