--- a/HandicraftApp/Sewing.xaml
+++ b/HandicraftApp/Sewing.xaml
@@ -1,6 +1,7 @@
 ﻿<Page x:Class="HandicraftApp.Sewing"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:sys="clr-namespace:System;assembly=mscorlib" 
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:HandicraftApp"
